--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.5.5",
-    "tslib": "1.14.1",
-    "zone.js": "0.10.3",
-    "bootstrap": "4.6.0",
-    "@types/node": "12.20.4",
+    "@angular/animations": "9.0.7",
+    "@angular/common": "9.0.7",
+    "@angular/compiler": "9.0.7",
     "@angular/core": "9.0.7",
     "@angular/forms": "9.0.7",
-    "@types/jasmine": "3.5.14",
-    "@angular/common": "9.0.7",
-    "@angular/router": "9.0.7",
-    "@angular/compiler": "9.0.7",
-    "@types/jasminewd2": "2.0.8",
-    "@angular/animations": "9.0.7",
     "@angular/platform-browser": "9.0.7",
-    "@angular/platform-browser-dynamic": "9.0.7"
+    "@angular/platform-browser-dynamic": "9.0.7",
+    "@angular/router": "9.0.7",
+    "@types/jasmine": "3.5.14",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "12.20.4",
+    "bootstrap": "4.6.0",
+    "jasmine-core": "^3.7.1",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.16.1",
+    "rxjs": "6.5.5",
+    "tslib": "1.14.1",
+    "zone.js": "0.10.3"
   },
   "scripts": {
     "ng": "ng",
